testsuite/escript/classes/fail-super-no-default.err
fail-super-no-default.src:14:5: error: In call to 'super': Parameter 'A::a0' was not passed, and there is no default.