testsuite/escript/classes/fail-super-no-default.src
class A()
  function A( this, a0 )
    return this;
  endfunction
endclass

class B(A)
  function B( this, b0 )
    super();
    return this;
  endfunction
endclass

class C(A)
  function C( this, c0 )
    super();
    return this;
  endfunction
endclass

class D(B, C)
  function D( this, d0 )
    super();
    return this;
  endfunction
endclass

var obj := D( "foo" );
print(obj);
